feat: melhora a estrutura de usuarios. Definindo campos obrigatórios e únicos